--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -19,9 +19,9 @@
                         </div>
                     </div>
                     <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-                        <h3>About Chic and Lighting</h3>
+                        <h3>About UNIDECOR</h3>
                         <p class="fst-italic">
-                            Welcome to Chic and Lighting, your ultimate destination for exquisite lighting solutions and home decor accessories! At Chic and Lighting, we believe that every space deserves to shine with elegance and style. Whether you're looking to illuminate your living room, bedroom, kitchen, or outdoor area, we have the perfect lighting fixtures to elevate your ambiance.
+                            Welcome to UNIDECOR, your ultimate destination for exquisite furniture solutions and home decor accessories! At UNIDECOR, we believe that every space deserves to shine with elegance and style. Whether you're looking to vibranate your living room, bedroom, kitchen, or outdoor area, we have the perfect furniture style to elevate your ambiance.
                         </p>
                         <ul>
                             <li>
@@ -35,9 +35,9 @@
                             </li>
                         </ul>
                         <p>
-                            At Chic and Lighting, we're committed to inspiring creativity and enhancing the beauty of your surroundings. Whether you're revamping your home, office, or commercial space, let us illuminate your world with our stunning collection of lighting fixtures and home decor accents.
+                            At UNIDECOR, we're committed to inspiring creativity and enhancing the beauty of your surroundings. Whether you're revamping your home, office, or commercial space, let us illuminate your world with our stunning collection of lighting fixtures and home decor accents.
 
-                            Thank you for choosing Chic and Lighting to brighten up your life!
+                            Thank you for choosing UNIDECOR to brighten up your life!
                         </p>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
                             <img src="/img/staffs/qhuy.jpg" style="width: 261px; height: 348px;" alt="Custom-sized image">
                             <div class="member-info">
                                 <div class="member-info-content">
-                                    <h4>Quang Huy, Ngo</h4>
+                                    <h4>VU NGOC CUONG</h4>
                                     <span>Team Leader</span>
                                 </div>
                                 <div class="social">
@@ -78,7 +78,7 @@
                             <img src="/img/staffs/dtai.jpg" style="width: 261px; height: 348px;" alt="Custom-sized image">
                             <div class="member-info">
                                 <div class="member-info-content">
-                                    <h4>Duc Tai, Le</h4>
+                                    <h4>TRIEU DUY THAI</h4>
                                     <span>Frontend Developer</span>
                                 </div>
                                 <div class="social">
@@ -96,7 +96,7 @@
                             <img src="/img/staffs/qphuong.jpg" style="width: 261px; height: 348px;" alt="Custom-sized image">
                             <div class="member-info">
                                 <div class="member-info-content">
-                                    <h4>Phuong, Nguyen Quoc</h4>
+                                    <h4>HA CHI CONG</h4>
                                     <span>Designer</span>
                                 </div>
                                 <div class="social">
@@ -114,7 +114,7 @@
                             <img src="/img/staffs/hson.jpg" style="width: 261px; height: 348px;" alt="Custom-sized image">
                             <div class="member-info">
                                 <div class="member-info-content">
-                                    <h4>Hoang Son, Nguyen Duc</h4>
+                                    <h4>DANG THU HA</h4>
                                     <span>Backend Developer</span>
                                 </div>
                                 <div class="social">
