--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
             <div class="container position-relative text-center text-lg-start" th:data-aos="zoom-in" th:data-aos-delay="100">
                 <div class="row">
                     <div class="col-lg-8">
-                        <h1>Welcome to <span>CHIC & LIGHTING</span></h1>
+                        <h1>Welcome to <span>UNIDECOR</span></h1>
                         <h2>Providing great products for more than 15 years!</h2>
 
                         <div class="mt-3">
