--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -166,7 +166,6 @@ h6 {
     top: 40px;
 }
 
-
 #header.header-scrolled {
     top: 0;
     box-shadow: 0px 0px 15px rgba(127, 137, 161, 0.3);
@@ -397,7 +396,7 @@ h6 {
 #hero {
     width: 100%;
     height: 100vh;
-    background: url("../img/background.jfif") top center;
+    background: url("../img/hero-bg.jpg") top center;
     background-size: cover;
     position: relative;
     padding: 0;
