--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UNIDECOR</title>
+    <title>Chic_lighting</title>
 
     <!-- Favicons -->
     <link rel="icon" th:href="@{/img/favicon.png}">
@@ -49,7 +49,7 @@
             <a href="index.html" class="logo me-auto me-lg-0">
                 <img src="/img/favicon.png" alt="logo" class="img-fluid m-xl-1">
             </a>
-            <h1 class="logo me-auto me-lg-0"><a th:href="@{/}">UNIDECOR</a></h1>
+            <h1 class="logo me-auto me-lg-0"><a th:href="@{/}">Chic & Lighting</a></h1>
         </div>
         <div class="d-flex align-items-center">
 
@@ -112,12 +112,12 @@
 
                 <div class="col-lg-3 col-md-6">
                     <div class="footer-info">
-                        <h3>UNIDECOR</h3>
+                        <h3>Chic & Lighting</h3>
                         <p>
                             Hanoi University, Nguyen Trai <br>
                             Thanh Xuan, Hanoi, Vietnam.<br><br>
                             <strong>Phone:</strong> +84 92 702 3447<br>
-                            <strong>Email:</strong> unidecor@gmail.com<br>
+                            <strong>Email:</strong> chicandlighting@gmail.com<br>
                         </p>
                         <div class="social-links mt-3">
                             <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -140,7 +140,7 @@
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>Our Team</h4>
                     <ul>
-                        <li><i class="bx bx-chevron-right"></i> <a href="#">Team 1 - EPROJECT</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="#">Team 7 - EPROJECT</a></li>
                     </ul>
                 </div>
 
@@ -155,10 +155,10 @@
 
     <div class="container">
         <div class="copyright">
-            &copy; Copyright <strong><span>Team-1 / E-PROJECT</span></strong>
+            &copy; Copyright <strong><span>Team-7 / E-PROJECT</span></strong>
         </div>
         <div class="credits">
-            Designed by <a href="#">Team 1</a>
+            Designed by <a href="#">Team 7</a>
         </div>
     </div>
 </footer><!-- End Footer -->
