--- a/src/main/resources/templates/listProduct.html
+++ b/src/main/resources/templates/listProduct.html
@@ -18,22 +18,22 @@
                         <li data-type="viewall">View All</li>
                     </a>
                     <a href="#">
-                        <li data-type="ceiling">Ceiling Lights</li>
+                        <li data-type="bench">Bench</li>
                     </a>
                     <a href="#">
-                        <li data-type="wall">Wall Lights</li>
+                        <li data-type="sofa">Sofas</li>
                     </a>
                     <a href="#">
-                        <li data-type="lamp">Lamps</li>
+                        <li data-type="table">tables</li>
                     </a>
                     <a href="#">
-                        <li data-type="outdoor">Outdoor Lights</li>
+                        <li data-type="decor">Decorations</li>
                     </a>
                     <a href="#">
-                        <li data-type="fan">Fans</li>
+                        <li data-type="leather">Leathers</li>
                     </a>
                     <a href="#">
-                        <li data-type="accents">Accents</li>
+                        <li data-type="pottery">Potteries</li>
                     </a>
                 </ul>
             </div>
