--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -8,7 +8,7 @@
 --------------------------------------------------------------*/
 body {
     font-family: "Open Sans", sans-serif;
-    background: #fff;
+    background: #666;
     color: #000;
 }
 
@@ -130,40 +130,14 @@ h6 {
     }
 }
 
-/*--------------------------------------------------------------
-# Top Bar
---------------------------------------------------------------*/
-#topbar {
-    height: 40px;
-    font-size: 14px;
-    transition: all 0.5s;
-    z-index: 996;
-}
 
-#topbar.topbar-scrolled {
-    top: -40px;
-}
-
-#topbar .contact-info i {
-    font-style: normal;
-    color: #000;
-}
-
-#topbar .contact-info i span {
-    padding-left: 5px;
-    color: #000;
-}
 
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
 #header {
-    background: #fff;
+    background: #181C14;
     box-shadow: 0px 0px 10px rgba(127, 137, 161, 0.25);
-    transition: all 0.5s;
-    z-index: 997;
-    padding: 15px 0;
-    top: 40px;
 }
 
 
@@ -184,7 +158,7 @@ h6 {
 }
 
 #header .logo a {
-    color: #000;
+    color: #fff;
 }
 
 #header .logo img {
@@ -229,7 +203,7 @@ h6 {
     align-items: center;
     justify-content: space-between;
     padding: 10px 0 10px 30px;
-    color: #000;
+    color: #fff;
     white-space: nowrap;
     transition: 0.3s;
     font-size: 14px;
@@ -246,6 +220,7 @@ h6 {
 .navbar a:hover,
 .navbar li:hover>a {
     text-decoration: underline;
+    color: #666;
 }
 
 .navbar .dropdown ul {
@@ -281,7 +256,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-    text-decoration: underline;
+    text-decoration: underline;;
 }
 
 .navbar .dropdown:hover>ul {
@@ -397,15 +372,15 @@ h6 {
 #hero {
     width: 100%;
     height: 100vh;
-    background: url("../img/background.jfif") top center;
-    background-size: cover;
+    background: url("/img/background.jpg") top center;
+    background-size: 100%;
     position: relative;
     padding: 0;
 }
 
 #hero:before {
     content: "";
-    background: rgba(243, 240, 240, 0.693);
+    background: rgba(243, 240, 240, 0.1);
     position: absolute;
     bottom: 0;
     top: 0;
@@ -428,16 +403,21 @@ h6 {
     font-size: 48px;
     font-weight: 500;
     line-height: 48px;
-    color: #666;
+    color: #fff;
     font-family: "Poppins", sans-serif;
 }
 
+#hero .unidecor {
+    margin: 50px;
+    font-size: 120px;
+}
+
 #hero h1 span {
-    color: #222;
+    color: #fff;
 }
 
 #hero h2 {
-    color: #666;
+    color: #fff;
     margin-bottom: 10px 0 0 0;
     font-size: 22px;
 }
@@ -736,9 +716,15 @@ section {
     min-height: 600px;
 }
 
+
+
+
 /*--------------------------------------------------------------
   # Why Us
   --------------------------------------------------------------*/
+.why-us{
+    background:#333;
+}
 .why-us .box {
     padding: 50px 30px;
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
@@ -766,6 +752,10 @@ section {
     font-size: 15px;
     margin: 0;
     padding: 0;
+}
+
+.why-us .container p{
+    color: white;
 }
 
 .why-us .box:hover {
@@ -1259,6 +1249,7 @@ section {
     padding: 10px 20px 0px 20px;
     border-width: 1px;
     height: 317px;
+    background-color: #444;
 }
 .lstproduct a{
     color: black;
@@ -1280,8 +1271,8 @@ section {
 }
 
 .lstype{
-    color: #222222 !important;
-    background: white;
+    color: #fff !important;
+    background: #444;
 }
 
 .stickyelm {
@@ -1384,6 +1375,10 @@ section {
 
 .login > div{
     width: 100%;
+}
+
+.mainproduct .floatproductfilter{
+    background-color: #444;
 }
 
 .lstfilterbtn{
