--- a/src/main/resources/templates/_adminlayout.html
+++ b/src/main/resources/templates/_adminlayout.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/vendor/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
     <!-- Favicons -->
     <link rel="icon" th:href="@{/img/favicon.png}">
-    <link rel="apple-touch-icon" th:href="@{/img/favicon.png}">
+    <link rel="apple-touch-icon" href="#" th:href="@{/img/favicon.png}">
     <title>Admin</title>
 </head>
 <body>
