--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -8,7 +8,7 @@
 
     <!-- Favicons -->
     <link rel="icon" th:href="@{/img/favicon.png}">
-    <link rel="apple-touch-icon" th:href="@{/img/favicon.png}">
+    <link rel="apple-touch-icon" href="#" th:href="@{/img/favicon.png}">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -32,21 +32,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-<!-- ======= Top Bar ======= -->
-<div id="topbar" class="d-flex align-items-center fixed-top">
-    <div class="container d-flex justify-content-center justify-content-md-between">
-        <div class="contact-info d-flex align-items-center">
-            <i class="bi bi-phone d-flex align-items-center"><span>+84 92 702 3447</span></i>
-            <i class="bi bi-clock d-flex align-items-center ms-4"><span> Mon-Sat: 9AM - 23PM</span></i>
-        </div>
-    </div>
-</div>
-
 <!-- ======= Header ======= -->
 <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
         <div class="d-flex align-items-center">
-            <a href="index.html" class="logo me-auto me-lg-0">
+            <a th:href="@{/}" class="logo me-auto me-lg-0">
                 <img src="/img/favicon.png" alt="logo" class="img-fluid m-xl-1">
             </a>
             <h1 class="logo me-auto me-lg-0"><a th:href="@{/}">UNIDECOR</a></h1>
