--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,30 +4,24 @@
       layout:decorate="_layout">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <div layout:fragment="content">
     <main id="main">
 
         <!-- ======= Hero Section ======= -->
-        <section id="hero" class="d-flex align-items-center">
-            <div class="container position-relative text-center text-lg-start" th:data-aos="zoom-in" th:data-aos-delay="100">
-                <div class="row">
-                    <div class="col-lg-8">
-                        <h1>Welcome to <span>UNIDECOR</span></h1>
-                        <h2>Providing great products for more than 15 years!</h2>
-
-                        <div class="mt-3">
-                            <a href="#product" class="btn btn-dark rounded-0">View More</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 d-flex align-items-center justify-content-center position-relative" th:data-aos="zoom-in" th:data-aos-delay="200">
-                        <a href="https://www.youtube.com/watch?v=KyEJ3rOlE0g" class="glightbox play-btn"></a>
-                    </div>
-
+        <section id="hero" class="d-flex align-items-center justify-content-center text-center" style="height: 100vh;">
+            <div class="container position-relative" >
+                <h1>WELCOME TO</h1>
+                <h1 class="unidecor">UNIDECOR</h1>
+                <h2>NEW FURNITURE COLLECTION</h2>
+                <div class="mt-3">
+                    <a href="#product" class="btn btn-dark rounded-0">View More</a>
                 </div>
             </div>
-        </section><!-- End Hero -->
+        </section>
+        <!-- End Hero -->
         <!-- ======= Products Section ======= -->
 
         <section id="product" class="product" th:attr="data-aos='fade-up'">
