--- a/src/main/resources/templates/listProduct.html
+++ b/src/main/resources/templates/listProduct.html
@@ -4,6 +4,7 @@
       layout:decorate="_layout">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <div layout:fragment="content">
@@ -44,7 +45,7 @@
                 <div class="d-flex flex-row mt-4 mb-5">
                     <h6 class="font-weight-light" style="margin-left: 4%;">View All</h6>
                 </div>
-                <div class="d-flex flex-row mt-4 mb-5 stickyelm lstfilterbtn">
+                <div class="d-flex flex-row mt-4 mb-5 stickyelm lstfilterbtn float">
                     <button type="button" class="bi bi-filter">FILTER</button>
                     <button type="button" class="filterbt" data-type="bestseller">BEST SELLER</button>
                     <button type="button" class="filterbt" data-type="sale">SALE</button>
@@ -73,7 +74,7 @@
                                     <button th:if="${product.statusName == 'outofstock'}" class="bi bi-cart" title="Add to cart" disabled></button>
                                 </div>
                                 <p class="card-price">
-                                    $ <span th:text="${product.price}"></span>
+                                    $acbacb <span th:text="${product.price}"></span>
                                     <span class="card-sale-price" th:classappend="${product.statusName}" th:text="'Sale off to: $ ' + ${product.salePrice}"></span>
                                 </p>
                             </div>
