--- a/src/main/resources/templates/listProduct.html
+++ b/src/main/resources/templates/listProduct.html
@@ -17,7 +17,7 @@
                         <li data-type="viewall">View All</li>
                     </a>
                     <a href="#">
-                        <li data-type="bench">Bench</li>
+                        <li data-type="chair">Chairs</li>
                     </a>
                     <a href="#">
                         <li data-type="sofa">Sofas</li>
@@ -29,10 +29,10 @@
                         <li data-type="decor">Decorations</li>
                     </a>
                     <a href="#">
-                        <li data-type="leather">Leathers</li>
+                        <li data-type="storage">Storage</li>
                     </a>
                     <a href="#">
-                        <li data-type="pottery">Potteries</li>
+                        <li data-type="bed">Beds</li>
                     </a>
                 </ul>
             </div>
