--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
   <meta charset="utf-8" />
@@ -36,7 +36,7 @@
 <body>
 <main id="login">
   <div class="container">
-    <a href="index.html" class="d-flex justify-content-center logo me-lg-0 mt-3">
+    <a th:href="@{/}" class="d-flex justify-content-center logo me-lg-0 mt-3">
       <img src="/img/favicon.png" alt="logo" class="img-fluid m-xl-1">
     </a>
 
