--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -37,7 +37,7 @@
 <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
         <div class="d-flex align-items-center">
-            <a href="index.html" class="logo me-auto me-lg-0">
+            <a th:href="@{/}" class="logo me-auto me-lg-0">
                 <img src="/img/favicon.png" alt="logo" class="logo-img img-fluid m-xl-1">
             </a>
             <h1 class="logo me-auto me-lg-0"><a th:href="@{/}">UNIDECOR</a></h1>
