--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -57,7 +57,7 @@
 
                     <div class="col-lg-3 col-md-4">
                         <div class="member" data-aos="zoom-in" data-aos-delay="100">
-                            <img src="/img/staffs/qhuy.jpg" style="width: 261px; height: 348px;" alt="Custom-sized image">
+                            <img src="/img/staffs/vnc.jpg" style="width: 261px; height: 348px;" alt="Custom-sized image">
                             <div class="member-info">
                                 <div class="member-info-content">
                                     <h4>VU NGOC CUONG</h4>
@@ -65,7 +65,7 @@
                                 </div>
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
-                                    <a href="https://www.facebook.com/huy.nq.100"><i class="bi bi-facebook"></i></a>
+                                    <a href="https://www.facebook.com/kophaicuongdau"><i class="bi bi-facebook"></i></a>
                                     <a href=""><i class="bi bi-instagram"></i></a>
                                     <a href=""><i class="bi bi-linkedin"></i></a>
                                 </div>
@@ -75,7 +75,7 @@
 
                     <div class="col-lg-3 col-md-4">
                         <div class="member" data-aos="zoom-in" data-aos-delay="100">
-                            <img src="/img/staffs/dtai.jpg" style="width: 261px; height: 348px;" alt="Custom-sized image">
+                            <img src="/img/staffs/tdt.jpg" style="width: 261px; height: 348px;" alt="Custom-sized image">
                             <div class="member-info">
                                 <div class="member-info-content">
                                     <h4>TRIEU DUY THAI</h4>
@@ -83,7 +83,7 @@
                                 </div>
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
-                                    <a href="https://www.facebook.com/leductai03"><i class="bi bi-facebook"></i></a>
+                                    <a href="https://www.facebook.com/thai.trieuduy.9"><i class="bi bi-facebook"></i></a>
                                     <a href=""><i class="bi bi-instagram"></i></a>
                                     <a href=""><i class="bi bi-linkedin"></i></a>
                                 </div>
@@ -93,7 +93,7 @@
 
                     <div class="col-lg-3 col-md-4">
                         <div class="member" data-aos="zoom-in" data-aos-delay="200">
-                            <img src="/img/staffs/qphuong.jpg" style="width: 261px; height: 348px;" alt="Custom-sized image">
+                            <img src="/img/staffs/hcc.jpg" style="width: 261px; height: 348px;" alt="Custom-sized image">
                             <div class="member-info">
                                 <div class="member-info-content">
                                     <h4>HA CHI CONG</h4>
@@ -101,7 +101,7 @@
                                 </div>
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
-                                    <a href="https://www.facebook.com/903.npp"><i class="bi bi-facebook"></i></a>
+                                    <a href="https://www.facebook.com/ha.chi.cong.630922"><i class="bi bi-facebook"></i></a>
                                     <a href=""><i class="bi bi-instagram"></i></a>
                                     <a href=""><i class="bi bi-linkedin"></i></a>
                                 </div>
@@ -111,7 +111,7 @@
 
                     <div class="col-lg-3 col-md-4">
                         <div class="member" data-aos="zoom-in" data-aos-delay="200">
-                            <img src="/img/staffs/hson.jpg" style="width: 261px; height: 348px;" alt="Custom-sized image">
+                            <img src="/img/staffs/dth.jpg" style="width: 261px; height: 348px;" alt="Custom-sized image">
                             <div class="member-info">
                                 <div class="member-info-content">
                                     <h4>DANG THU HA</h4>
@@ -119,7 +119,7 @@
                                 </div>
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
-                                    <a href="https://www.facebook.com/profile.php?id=100036039785090"><i class="bi bi-facebook"></i></a>
+                                    <a href="https://www.facebook.com/Thuha7607"><i class="bi bi-facebook"></i></a>
                                     <a href=""><i class="bi bi-instagram"></i></a>
                                     <a href=""><i class="bi bi-linkedin"></i></a>
                                 </div>
