--- a/src/main/resources/templates/feedback.html
+++ b/src/main/resources/templates/feedback.html
@@ -42,13 +42,13 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>chicandlighting@gmail.com</p>
+                <p>unidecor@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+84 92 702 3447</p>
+                <p>+84 365 473 859</p>
               </div>
 
             </div>
