--- a/src/main/resources/templates/_adminlayout.html
+++ b/src/main/resources/templates/_adminlayout.html
@@ -163,7 +163,7 @@
 </div>
 
 <footer class="main-footer">
-    <strong>Copyright &copy; Team-7 &nbsp;<a th:href="@{/dashboard/}"> E-PROJECT </a></strong>
+    <strong>Copyright &copy; Team-1 &nbsp;<a th:href="@{/dashboard/}"> SE02PROJECT </a></strong>
 </footer>
 
 <!-- Control Sidebar -->
