--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="utf-8" />
@@ -107,12 +107,12 @@
 
                 <div class="col-lg-3 col-md-6">
                     <div class="footer-info">
-                        <h3>Chic & Lighting</h3>
+                        <h3>UNIDECOR</h3>
                         <p>
                             Hanoi University, Nguyen Trai <br>
                             Thanh Xuan, Hanoi, Vietnam.<br><br>
-                            <strong>Phone:</strong> +84 92 702 3447<br>
-                            <strong>Email:</strong> chicandlighting@gmail.com<br>
+                            <strong>Phone:</strong> +84 365 473 859<br>
+                            <strong>Email:</strong> unidecor@gmail.com<br>
                         </p>
                         <div class="social-links mt-3">
                             <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -135,7 +135,7 @@
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>Our Team</h4>
                     <ul>
-                        <li><i class="bx bx-chevron-right"></i> <a href="#">Team 7 - EPROJECT</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="#">Team 1 - SE02Project</a></li>
                     </ul>
                 </div>
 
@@ -150,10 +150,10 @@
 
     <div class="container">
         <div class="copyright">
-            &copy; Copyright <strong><span>Team-7 / E-PROJECT</span></strong>
+            &copy; Copyright <strong><span>Team-1 / SE02-PROJECT</span></strong>
         </div>
         <div class="credits">
-            Designed by <a href="#">Team 7</a>
+            Designed by <a href="#">Team 1</a>
         </div>
     </div>
 </footer><!-- End Footer -->
