register/resetpw/verify html changes v1.1.1

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1168,6 +1168,47 @@ section {
 }
 
 /*--------------------------------------------------------------
+  # Register
+  --------------------------------------------------------------*/
+
+#register h1 {
+    color: #EEEEEE;
+}
+
+
+
+#register button {
+    background-color: #666;
+    color: #EEEEEE;
+}
+
+/*--------------------------------------------------------------
+  # Verify
+  --------------------------------------------------------------*/
+
+#verify h1, p {
+    color: #EEEEEE;
+}
+
+#verify button {
+    background-color: #666;
+    color: #EEEEEE;
+}
+
+/*--------------------------------------------------------------
+  # Reset-password
+  --------------------------------------------------------------*/
+
+  #reset-password h1, p {
+    color: #EEEEEE;
+}
+
+#reset-password button {
+    background-color: #666;
+    color: #EEEEEE;
+}
+
+/*--------------------------------------------------------------
   # Product Template
   --------------------------------------------------------------*/
 #product {
