--- a/src/main/resources/templates/listProduct.html
+++ b/src/main/resources/templates/listProduct.html
@@ -44,10 +44,10 @@
                     <h6 class="font-weight-light" style="margin-left: 4%;">View All</h6>
                 </div>
                 <div class="d-flex flex-row mt-4 mb-5 lstfilterbtn">
-                    <button type="button" class="bi bi-filter" style="color: #EEEEEE;">FILTER</button>
-                    <button type="button" class="filterbt" data-type="bestseller" style="background-color: black; color: #EEEEEE;">BEST SELLER</button>
-                    <button type="button" class="filterbt" data-type="sale" style="background-color: black; color: #EEEEEE;">SALE</button>
-                    <button type="button" class="filterbt" data-type="viewall" style="background-color: black; color: #EEEEEE;">
+                    <button type="button" class="btn btn-black bi bi-filter" style="color: #EEEEEE;">FILTER</button>
+                    <button type="button" class="btn btn-black filterbt" data-type="bestseller" style="background-color: black; color: #EEEEEE;">BEST SELLER</button>
+                    <button type="button" class="btn btn-black filterbt" data-type="sale" style="background-color: black; color: #EEEEEE;">SALE</button>
+                    <button type="button" class="btn btn-black filterbt" data-type="viewall" style="background-color: black; color: #EEEEEE;">
                         VIEW ALL
                     </button>
                 </div>
