--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chic_lighting</title>
+    <title>UNIDECOR</title>
 
     <!-- Favicons -->
     <link href="/img/favicon.png" rel="icon">
@@ -33,10 +33,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
-<body>
+<body id="register">
 <main id="main">
     <div class="container">
-        <a href="index.html" class="d-flex justify-content-center logo me-lg-0 mt-3">
+        <a th:href="@{/}" class="d-flex justify-content-center logo me-lg-0 mt-3">
             <img src="/img/favicon.png" alt="logo" class="img-fluid m-xl-1">
         </a>
 
@@ -88,7 +88,7 @@
 
             <div class="d-flex justify-content-between mb-5">
                 <button type="reset" class="btn btn-lg btn-black col-2">Reset</button>
-                <button type="submit" class="btn btn-lg btn-outline-dark col-4">Register</button>
+                <button type="submit" class="btn btn-lg btn-black col-2">Register</button>
             </div>
             <div class="text-center mb-3">
                 <p>
