--- a/src/main/resources/templates/resetPassword.html
+++ b/src/main/resources/templates/resetPassword.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chic_lighting</title>
+  <title>UNIDECOR</title>
 
   <!-- Favicons -->
   <link href="/img/favicon.png" rel="icon">
@@ -33,10 +33,10 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
-<body>
+<body id="reset-password">
 <main id="main">
   <div class="container">
-    <a href="index.html" class="d-flex justify-content-center logo me-lg-0 mt-3">
+    <a th:href="@{/}" class="d-flex justify-content-center logo me-lg-0 mt-3">
       <img src="/img/favicon.png" alt="logo" class="img-fluid m-xl-1">
     </a>
 
@@ -51,7 +51,7 @@
         <label>Email:</label>
       </div>
       <div class="col-12 col-md-8 col-lg-6 my-5">
-        <button type="submit" class="btn btn-dark container-fluid" style="height: 3em;">
+        <button type="submit" class="btn btn-black container-fluid" style="height: 3em;">
           Reset Password
         </button>
         <p th:if="${Error != null}" style="color: red;" th:text="${Error}"></p>
